--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="row">
             <div class="col-sm-3 col-md-3 col-lg-2 col-xl-4">    
 					        
-		<img src="images\pro.jpg" class="rounded float-right" alt="akash" width="250" height="350"> 
+		<img src="download.jfif" class="rounded float-right" alt="akash" width="250" height="350"> 
 					
             </div>  
                 <div class="col-sm-3 col-md-3 col-lg-2 col-xl-8 "> 
